--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
         "cordova-ios": "^4.5.4",
         "cordova-plugin-console": "^1.1.0",
         "cordova-plugin-device": "^1.1.6",
-        "cordova-plugin-splashscreen": "^4.0.3",
+        "cordova-plugin-ionic": "^4.1.4",
+        "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-whitelist": "^1.3.2",
         "cordova-sqlite-storage": "^2.1.4",
@@ -51,7 +52,6 @@
     "devDependencies": {
         "@ionic/app-scripts": "3.1.8",
         "html-minifier": "^3.5.5",
-        "ionic": "3.20.0",
         "purify-css": "^1.2.5",
         "typescript": "2.4.2"
     },
@@ -64,7 +64,15 @@
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
             "cordova-plugin-splashscreen": {},
-            "cordova-sqlite-storage": {}
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-ionic": {
+                "APP_ID": "14b6de2c",
+                "CHANNEL_NAME": "Master",
+                "UPDATE_METHOD": "background",
+                "WARN_DEBUG": "true",
+                "UPDATE_API": "https://api.ionicjs.com",
+                "MAX_STORE": "2"
+            }
         },
         "platforms": [
             "android",
