--- a/package.json
+++ b/package.json
@@ -27,17 +27,22 @@
         "@angular/platform-browser-dynamic": "5.2.7",
         "@ionic-native/core": "^4.4.0",
         "@ionic-native/device": "^4.3.3",
+        "@ionic-native/geolocation": "^4.7.0",
         "@ionic-native/keyboard": "^4.3.3",
+        "@ionic-native/native-geocoder": "^4.7.0",
         "@ionic-native/pro": "^4.5.2",
         "@ionic-native/splash-screen": "^4.4.0",
         "@ionic-native/status-bar": "^4.4.0",
         "@ionic/pro": "1.0.20",
         "@ionic/storage": "2.1.3",
-        "cordova-android": "6.4.0",
+        "cordova-android": "7.0.0",
         "cordova-ios": "^4.5.4",
+        "cordova-plugin-add-swift-support": "^1.7.1",
         "cordova-plugin-console": "^1.1.0",
         "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-geolocation": "^4.0.1",
         "cordova-plugin-ionic": "^4.1.4",
+        "cordova-plugin-nativegeocoder": "^3.1.1",
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-whitelist": "^1.3.2",
@@ -72,11 +77,17 @@
                 "WARN_DEBUG": "true",
                 "UPDATE_API": "https://api.ionicjs.com",
                 "MAX_STORE": "2"
+            },
+            "cordova-plugin-geolocation": {
+                "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
+            },
+            "cordova-plugin-nativegeocoder": {
+                "LOCATION_WHEN_IN_USE_DESCRIPTION": "Use geocoder service"
             }
         },
         "platforms": [
-            "android",
-            "ios"
+            "ios",
+            "android"
         ]
     },
     "config": {
